fix linked variant empty spacing on mobile

--- a/packages/assets/scss/03-organisms/_page-banner.scss
+++ b/packages/assets/scss/03-organisms/_page-banner.scss
@@ -388,18 +388,6 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
     overflow: hidden;
     height: auto;
-    min-height: 240px;
-
-    @media ($bp-large-extended) {
-      max-height: none;
-
-        &:after {
-        content: '';
-        display: block;
-        height: 50vw;
-        width: 100%;
-      }
-    }
 
     .ma__page-banner__image {
       position: absolute;
